<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.DetailFilmFragment">

    <ImageView
        android:id="@+id/film_detail__img__film_picture"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dp16"
        android:contentDescription="@string/empty_string"
        android:src="@drawable/ic_launcher_background"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/film_detail__lbl__film_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dp10"
        android:text="@string/empty_string"
        android:textSize="@dimen/dp18"
        app:layout_constraintBottom_toBottomOf="@id/film_detail__img__film_picture"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/film_detail__img__film_picture"
        app:layout_constraintTop_toTopOf="@id/film_detail__img__film_picture" />

    <TextView
        android:id="@+id/film_detail__lbl__film_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp10"
        android:text="@string/film_detail__lbl__description"
        android:textSize="@dimen/dp20"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@id/film_detail__img__film_picture"
        app:layout_constraintTop_toBottomOf="@id/film_detail__img__film_picture" />

    <EditText
        android:id="@+id/film_detail__input__film_description"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/dp16"
        android:autofillHints="true"
        android:inputType="text"
        android:text="@string/empty_string"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/film_detail__lbl__film_description"
        app:layout_constraintTop_toBottomOf="@id/film_detail__lbl__film_description" />

    <TextView
        android:id="@+id/film_detail__lbl_film_director"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp18"
        android:textSize="@dimen/dp20"
        android:textStyle="bold"
        android:text="@string/fil_row__lbl__director"
        app:layout_constraintTop_toBottomOf="@id/film_detail__input__film_description"
        app:layout_constraintStart_toStartOf="@id/film_detail__img__film_picture"/>

    <EditText
        android:id="@+id/film_detail__input__film_director"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/dp16"
        android:layout_marginStart="@dimen/dp5"
        app:layout_constraintBottom_toBottomOf="@id/film_detail__lbl_film_director"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/film_detail__lbl_film_director"
        app:layout_constraintTop_toTopOf="@id/film_detail__lbl_film_director" />

    <TextView
        android:id="@+id/film_detail__lbl_film_people"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp18"
        android:textSize="@dimen/dp20"
        android:textStyle="bold"
        android:text="@string/film_detail__lbl__people"
        app:layout_constraintTop_toBottomOf="@id/film_detail__lbl_film_director"
        app:layout_constraintStart_toStartOf="@id/film_detail__img__film_picture"/>

    <EditText
        android:id="@+id/film_detail__input__film_people"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/dp16"
        android:layout_marginStart="@dimen/dp5"
        app:layout_constraintBottom_toBottomOf="@id/film_detail__lbl_film_people"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/film_detail__lbl_film_people"
        app:layout_constraintTop_toTopOf="@id/film_detail__lbl_film_people" />

    <TextView
        android:id="@+id/film_detail__lbl_film_release_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp18"
        android:textSize="@dimen/dp20"
        android:textStyle="bold"
        android:text="@string/film_detail__lbl__release_date"
        app:layout_constraintTop_toBottomOf="@id/film_detail__lbl_film_people"
        app:layout_constraintStart_toStartOf="@id/film_detail__img__film_picture"/>

    <EditText
        android:id="@+id/film_detail__input__release_date"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/dp16"
        android:layout_marginStart="@dimen/dp5"
        app:layout_constraintBottom_toBottomOf="@id/film_detail__lbl_film_release_date"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/film_detail__lbl_film_release_date"
        app:layout_constraintTop_toTopOf="@id/film_detail__lbl_film_release_date" />

    <TextView
        android:id="@+id/film_detail__lbl_film_running_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp18"
        android:textSize="@dimen/dp20"
        android:textStyle="bold"
        android:text="@string/film_detail__lbl__running_time"
        app:layout_constraintTop_toBottomOf="@id/film_detail__lbl_film_release_date"
        app:layout_constraintStart_toStartOf="@id/film_detail__img__film_picture"/>

    <EditText
        android:id="@+id/film_detail__input__running_time"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/dp16"
        android:layout_marginStart="@dimen/dp5"
        app:layout_constraintBottom_toBottomOf="@id/film_detail__lbl_film_running_time"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/film_detail__lbl_film_running_time"
        app:layout_constraintTop_toTopOf="@id/film_detail__lbl_film_running_time" />

    <Button
        android:id="@+id/detail_fragment__btn__save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dp10"
        android:text="@string/film_detail__btn__save"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>