<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp10"
        android:layout_marginTop="@dimen/dp5"
        android:layout_marginEnd="@dimen/dp10"
        android:layout_marginBottom="@dimen/dp5"
        app:cardCornerRadius="@dimen/dp10">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/film_row__container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/film_row__img__film_picture"
                android:layout_width="@dimen/dp100"
                android:layout_height="@dimen/dp100"
                android:layout_margin="10dp"
                android:contentDescription="@string/app_name"
                android:src="@drawable/ic_launcher_background"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <TextView
                android:id="@+id/film_row__lbl__film_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp10"
                android:layout_marginTop="@dimen/dp5"
                android:text="@string/fil_row__lbl__title"
                android:textSize="@dimen/dp14"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@id/film_row__img__film_picture"
                app:layout_constraintTop_toTopOf="@id/film_row__img__film_picture" />

            <TextView
                android:id="@+id/film_row__lbl__film_title_value"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp10"
                android:layout_marginEnd="10dp"
                android:text="@string/empty_string"
                android:textSize="@dimen/dp14"
                app:layout_constraintEnd_toStartOf="@+id/film_row__img__delete_button"
                app:layout_constraintStart_toEndOf="@id/film_row__lbl__film_title"
                app:layout_constraintTop_toTopOf="@id/film_row__lbl__film_title" />

            <TextView
                android:id="@+id/film_row__lbl__film_director"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp10"
                android:text="@string/fil_row__lbl__director"
                android:textSize="@dimen/dp14"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@id/film_row__img__film_picture"
                app:layout_constraintTop_toBottomOf="@id/film_row__lbl__film_title"
                app:layout_constraintBottom_toTopOf="@id/film_row__lbl__film_rtScore"/>

            <TextView
                android:id="@+id/film_row__lbl__film_director_value"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp10"
                android:layout_marginEnd="10dp"
                android:text="@string/empty_string"
                android:textSize="@dimen/dp14"
                app:layout_constraintBottom_toTopOf="@id/film_row__lbl__film_rtScore"
                app:layout_constraintEnd_toStartOf="@+id/film_row__img__delete_button"
                app:layout_constraintStart_toEndOf="@id/film_row__lbl__film_director"
                app:layout_constraintTop_toBottomOf="@id/film_row__lbl__film_title" />

            <TextView
                android:id="@+id/film_row__lbl__film_rtScore"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp10"
                android:layout_marginBottom="@dimen/dp5"
                android:text="@string/fil_row__lbl__rtScore"
                android:textSize="@dimen/dp14"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@id/film_row__img__film_picture"
                app:layout_constraintBottom_toBottomOf="@id/film_row__img__film_picture"/>

            <TextView
                android:id="@+id/film_row__lbl__film_rtScore_value"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp10"
                android:layout_marginEnd="10dp"
                android:text="@string/empty_string"
                android:textSize="@dimen/dp14"
                app:layout_constraintBottom_toBottomOf="@id/film_row__lbl__film_rtScore"
                app:layout_constraintEnd_toStartOf="@+id/film_row__img__delete_button"
                app:layout_constraintStart_toEndOf="@id/film_row__lbl__film_rtScore" />

            <ImageView
                android:id="@+id/film_row__img__delete_button"
                android:layout_width="30dp"
                android:layout_height="0dp"
                android:layout_margin="10dp"
                android:layout_marginEnd="10dp"
                android:contentDescription="@string/app_name"
                android:src="@drawable/ic_launcher_background"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</androidx.appcompat.widget.LinearLayoutCompat>